--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "noImplicitAny": true,
         "removeComments": true,
         "allowJs": true,
-        "checkJs": true
+        "checkJs": true,
+        "outDir": "./dist"
     }
 }
