--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "functional-json-schema",
   "version": "0.0.2-0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:wittydeveloper/functional-json-schema.git",
   "author": "Charly POLY <cpoly55@gmail.com>",
   "license": "MIT",
