--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "noImplicitAny": true,
         "removeComments": true,
         "declaration": true,
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "rootDir": "."
     }
 }
